--- a/style.css
+++ b/style.css
@@ -35,98 +35,97 @@ background-size: cover;
        transition: background-image 5s;
 }
 @-webkit-keyframes bgchange {
-  0%       { background-image: url("../media/bg10.png"); background-size: cover; }
-  9.99%    { background-image: url("../media/bg10.png"); background-size: cover; }
-  10%      { background-image: url("../media/bg9.jpg"); background-size: cover; }
-  19.99%   { background-image: url("../media/bg9.jpg"); background-size: cover; }
-  20%      { background-image: url("../media/bg8.jpg"); background-size: cover; }
-  29.99%   { background-image: url("../media/bg8.jpg"); background-size: cover; }
-  30%      { background-image: url("../media/bg7.jpg"); background-size: cover; }
-  39.99%   { background-image: url("../media/bg7.jpg"); background-size: cover; }
-  40%      { background-image: url("../media/bg6.jpg"); background-size: cover; }
-  49.99%   { background-image: url("../media/bg6.jpg"); background-size: cover; }
-  50%      { background-image: url("../media/bg5.jpg"); background-size: cover; }
-  59.99%   { background-image: url("../media/bg5.jpg"); background-size: cover; }
-  60%      { background-image: url("../media/bg4.jpg"); background-size: cover; }
-  69.99%   { background-image: url("../media/bg4.jpg"); background-size: cover; }
-  70%      { background-image: url("../media/bg3.jpg"); background-size: cover; }
-  79.99%   { background-image: url("../media/bg3.jpg"); background-size: cover; }
-  80%      { background-image: url("../media/bg2.jpg"); background-size: cover; }
-  89.99%   { background-image: url("../media/bg2.jpg"); background-size: cover; }
-  90%      { background-image: url("../media/bg1.jpg"); background-size: cover; }
-  99.99%   { background-image: url("../media/bg1.jpg"); background-size: cover; }
-  100%     { background-image: url("../media/bg10.png"); background-size: cover; }
-  }
+  0%       { background-image: url("./media/bg10.png"); background-size: cover; }
+  9.99%    { background-image: url("./media/bg10.png"); background-size: cover; }
+  10%      { background-image: url("./media/bg9.jpg"); background-size: cover; }
+  19.99%   { background-image: url("./media/bg9.jpg"); background-size: cover; }
+  20%      { background-image: url("./media/bg8.jpg"); background-size: cover; }
+  29.99%   { background-image: url("./media/bg8.jpg"); background-size: cover; }
+  30%      { background-image: url("./media/bg7.jpg"); background-size: cover; }
+  39.99%   { background-image: url("./media/bg7.jpg"); background-size: cover; }
+  40%      { background-image: url("./media/bg6.jpg"); background-size: cover; }
+  49.99%   { background-image: url("./media/bg6.jpg"); background-size: cover; }
+  50%      { background-image: url("./media/bg5.jpg"); background-size: cover; }
+  59.99%   { background-image: url("./media/bg5.jpg"); background-size: cover; }
+  60%      { background-image: url("./media/bg4.jpg"); background-size: cover; }
+  69.99%   { background-image: url("./media/bg4.jpg"); background-size: cover; }
+  70%      { background-image: url("./media/bg3.jpg"); background-size: cover; }
+  79.99%   { background-image: url("./media/bg3.jpg"); background-size: cover; }
+  80%      { background-image: url("./media/bg2.jpg"); background-size: cover; }
+  89.99%   { background-image: url("./media/bg2.jpg"); background-size: cover; }
+  90%      { background-image: url("./media/bg1.jpg"); background-size: cover; }
+  99.99%   { background-image: url("./media/bg1.jpg"); background-size: cover; }
+  100%     { background-image: url("./media/bg10.png"); background-size: cover; }
+}
   @-o-keyframes bgchange {
-  0%       { background-image: url("../media/bg10.png"); background-size: cover; }
-  9.99%    { background-image: url("../media/bg10.png"); background-size: cover; }
-  10%      { background-image: url("../media/bg9.jpg"); background-size: cover; }
-  19.99%   { background-image: url("../media/bg9.jpg"); background-size: cover; }
-  20%      { background-image: url("../media/bg8.jpg"); background-size: cover; }
-  29.99%   { background-image: url("../media/bg8.jpg"); background-size: cover; }
-  30%      { background-image: url("../media/bg7.jpg"); background-size: cover; }
-  39.99%   { background-image: url("../media/bg7.jpg"); background-size: cover; }
-  40%      { background-image: url("../media/bg6.jpg"); background-size: cover; }
-  49.99%   { background-image: url("../media/bg6.jpg"); background-size: cover; }
-  50%      { background-image: url("../media/bg5.jpg"); background-size: cover; }
-  59.99%   { background-image: url("../media/bg5.jpg"); background-size: cover; }
-  60%      { background-image: url("../media/bg4.jpg"); background-size: cover; }
-  69.99%   { background-image: url("../media/bg4.jpg"); background-size: cover; }
-  70%      { background-image: url("../media/bg3.jpg"); background-size: cover; }
-  79.99%   { background-image: url("../media/bg3.jpg"); background-size: cover; }
-  80%      { background-image: url("../media/bg2.jpg"); background-size: cover; }
-  89.99%   { background-image: url("../media/bg2.jpg"); background-size: cover; }
-  90%      { background-image: url("../media/bg1.jpg"); background-size: cover; }
-  99.99%   { background-image: url("../media/bg1.jpg"); background-size: cover; }
-  100%     { background-image: url("../media/bg10.png"); background-size: cover; }
-  }
+  0%       { background-image: url("./media/bg10.png"); background-size: cover; }
+  9.99%    { background-image: url("./media/bg10.png"); background-size: cover; }
+  10%      { background-image: url("./media/bg9.jpg"); background-size: cover; }
+  19.99%   { background-image: url("./media/bg9.jpg"); background-size: cover; }
+  20%      { background-image: url("./media/bg8.jpg"); background-size: cover; }
+  29.99%   { background-image: url("./media/bg8.jpg"); background-size: cover; }
+  30%      { background-image: url("./media/bg7.jpg"); background-size: cover; }
+  39.99%   { background-image: url("./media/bg7.jpg"); background-size: cover; }
+  40%      { background-image: url("./media/bg6.jpg"); background-size: cover; }
+  49.99%   { background-image: url("./media/bg6.jpg"); background-size: cover; }
+  50%      { background-image: url("./media/bg5.jpg"); background-size: cover; }
+  59.99%   { background-image: url("./media/bg5.jpg"); background-size: cover; }
+  60%      { background-image: url("./media/bg4.jpg"); background-size: cover; }
+  69.99%   { background-image: url("./media/bg4.jpg"); background-size: cover; }
+  70%      { background-image: url("./media/bg3.jpg"); background-size: cover; }
+  79.99%   { background-image: url("./media/bg3.jpg"); background-size: cover; }
+  80%      { background-image: url("./media/bg2.jpg"); background-size: cover; }
+  89.99%   { background-image: url("./media/bg2.jpg"); background-size: cover; }
+  90%      { background-image: url("./media/bg1.jpg"); background-size: cover; }
+  99.99%   { background-image: url("./media/bg1.jpg"); background-size: cover; }
+  100%     { background-image: url("./media/bg10.png"); background-size: cover; }
+}
   @-moz-keyframes bgchange {
-  0%       { background-image: url("../media/bg10.png"); background-size: cover; }
-  9.99%    { background-image: url("../media/bg10.png"); background-size: cover; }
-  10%      { background-image: url("../media/bg9.jpg"); background-size: cover; }
-  19.99%   { background-image: url("../media/bg9.jpg"); background-size: cover; }
-  20%      { background-image: url("../media/bg8.jpg"); background-size: cover; }
-  29.99%   { background-image: url("../media/bg8.jpg"); background-size: cover; }
-  30%      { background-image: url("../media/bg7.jpg"); background-size: cover; }
-  39.99%   { background-image: url("../media/bg7.jpg"); background-size: cover; }
-  40%      { background-image: url("../media/bg6.jpg"); background-size: cover; }
-  49.99%   { background-image: url("../media/bg6.jpg"); background-size: cover; }
-  50%      { background-image: url("../media/bg5.jpg"); background-size: cover; }
-  59.99%   { background-image: url("../media/bg5.jpg"); background-size: cover; }
-  60%      { background-image: url("../media/bg4.jpg"); background-size: cover; }
-  69.99%   { background-image: url("../media/bg4.jpg"); background-size: cover; }
-  70%      { background-image: url("../media/bg3.jpg"); background-size: cover; }
-  79.99%   { background-image: url("../media/bg3.jpg"); background-size: cover; }
-  80%      { background-image: url("../media/bg2.jpg"); background-size: cover; }
-  89.99%   { background-image: url("../media/bg2.jpg"); background-size: cover; }
-  90%      { background-image: url("../media/bg1.jpg"); background-size: cover; }
-  99.99%   { background-image: url("../media/bg1.jpg"); background-size: cover; }
-  100%     { background-image: url("../media/bg10.png"); background-size: cover; }
-  }
+  0%       { background-image: url("./media/bg10.png"); background-size: cover; }
+  9.99%    { background-image: url("./media/bg10.png"); background-size: cover; }
+  10%      { background-image: url("./media/bg9.jpg"); background-size: cover; }
+  19.99%   { background-image: url("./media/bg9.jpg"); background-size: cover; }
+  20%      { background-image: url("./media/bg8.jpg"); background-size: cover; }
+  29.99%   { background-image: url("./media/bg8.jpg"); background-size: cover; }
+  30%      { background-image: url("./media/bg7.jpg"); background-size: cover; }
+  39.99%   { background-image: url("./media/bg7.jpg"); background-size: cover; }
+  40%      { background-image: url("./media/bg6.jpg"); background-size: cover; }
+  49.99%   { background-image: url("./media/bg6.jpg"); background-size: cover; }
+  50%      { background-image: url("./media/bg5.jpg"); background-size: cover; }
+  59.99%   { background-image: url("./media/bg5.jpg"); background-size: cover; }
+  60%      { background-image: url("./media/bg4.jpg"); background-size: cover; }
+  69.99%   { background-image: url("./media/bg4.jpg"); background-size: cover; }
+  70%      { background-image: url("./media/bg3.jpg"); background-size: cover; }
+  79.99%   { background-image: url("./media/bg3.jpg"); background-size: cover; }
+  80%      { background-image: url("./media/bg2.jpg"); background-size: cover; }
+  89.99%   { background-image: url("./media/bg2.jpg"); background-size: cover; }
+  90%      { background-image: url("./media/bg1.jpg"); background-size: cover; }
+  99.99%   { background-image: url("./media/bg1.jpg"); background-size: cover; }
+  100%     { background-image: url("./media/bg10.png"); background-size: cover; }
+}
   @keyframes bgchange {
-  0%       { background-image: url("../media/bg10.png"); background-size: cover; }
-  9.99%    { background-image: url("../media/bg10.png"); background-size: cover; }
-  10%      { background-image: url("../media/bg9.jpg"); background-size: cover; }
-  19.99%   { background-image: url("../media/bg9.jpg"); background-size: cover; }
-  20%      { background-image: url("../media/bg8.jpg"); background-size: cover; }
-  29.99%   { background-image: url("../media/bg8.jpg"); background-size: cover; }
-  30%      { background-image: url("../media/bg7.jpg"); background-size: cover; }
-  39.99%   { background-image: url("../media/bg7.jpg"); background-size: cover; }
-  40%      { background-image: url("../media/bg6.jpg"); background-size: cover; }
-  49.99%   { background-image: url("../media/bg6.jpg"); background-size: cover; }
-  50%      { background-image: url("../media/bg5.jpg"); background-size: cover; }
-  59.99%   { background-image: url("../media/bg5.jpg"); background-size: cover; }
-  60%      { background-image: url("../media/bg4.jpg"); background-size: cover; }
-  69.99%   { background-image: url("../media/bg4.jpg"); background-size: cover; }
-  70%      { background-image: url("../media/bg3.jpg"); background-size: cover; }
-  79.99%   { background-image: url("../media/bg3.jpg"); background-size: cover; }
-  80%      { background-image: url("../media/bg2.jpg"); background-size: cover; }
-  89.99%   { background-image: url("../media/bg2.jpg"); background-size: cover; }
-  90%      { background-image: url("../media/bg1.jpg"); background-size: cover; }
-  99.99%   { background-image: url("../media/bg1.jpg"); background-size: cover; }
-  100%     { background-image: url("../media/bg10.png"); background-size: cover; }
-  }
-
+  0%       { background-image: url("./media/bg10.png"); background-size: cover; }
+  9.99%    { background-image: url("./media/bg10.png"); background-size: cover; }
+  10%      { background-image: url("./media/bg9.jpg"); background-size: cover; }
+  19.99%   { background-image: url("./media/bg9.jpg"); background-size: cover; }
+  20%      { background-image: url("./media/bg8.jpg"); background-size: cover; }
+  29.99%   { background-image: url("./media/bg8.jpg"); background-size: cover; }
+  30%      { background-image: url("./media/bg7.jpg"); background-size: cover; }
+  39.99%   { background-image: url("./media/bg7.jpg"); background-size: cover; }
+  40%      { background-image: url("./media/bg6.jpg"); background-size: cover; }
+  49.99%   { background-image: url("./media/bg6.jpg"); background-size: cover; }
+  50%      { background-image: url("./media/bg5.jpg"); background-size: cover; }
+  59.99%   { background-image: url("./media/bg5.jpg"); background-size: cover; }
+  60%      { background-image: url("./media/bg4.jpg"); background-size: cover; }
+  69.99%   { background-image: url("./media/bg4.jpg"); background-size: cover; }
+  70%      { background-image: url("./media/bg3.jpg"); background-size: cover; }
+  79.99%   { background-image: url("./media/bg3.jpg"); background-size: cover; }
+  80%      { background-image: url("./media/bg2.jpg"); background-size: cover; }
+  89.99%   { background-image: url("./media/bg2.jpg"); background-size: cover; }
+  90%      { background-image: url("./media/bg1.jpg"); background-size: cover; }
+  99.99%   { background-image: url("./media/bg1.jpg"); background-size: cover; }
+  100%     { background-image: url("./media/bg10.png"); background-size: cover; }
+}
 
 /*****CLOCK*****/
 
@@ -1665,7 +1664,7 @@ div.calendarbg-container {
 div.calendarbg {
   width: 100%;
   height: 100%;
-  background-image: url("../media/calendarbg.jpg");
+  background-image: url("./media/calendarbg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -2004,7 +2003,7 @@ div.weathermonitor {
   width: 314.5px;
   margin-left: 40px;
   margin-top: -345px;
-  background-image: url("../media/weatherbg.jpg");
+  background-image: url("./media/weatherbg.jpg");
 }
 
 /*****SHORTCUTS*****/
@@ -2054,12 +2053,12 @@ li.shortcuts-inner {
   padding: 15px;
   border-radius: 6px;
   border: 2px solid rgb(163, 154, 154);
-  background-image: url("../media/shortcutbg.jpg");
+  background-image: url("./media/shortcutbg.jpg");
   transition: 0.3s;
 }
 li.shortcuts-inner:hover {
   border: 2px solid black;
-  background-image: url("../media/shortcutbg-neg.jpg");
+  background-image: url("./media/shortcutbg-neg.jpg");
 }
 span.shortcut-inner-item {
   display: flex;
