--- a/style.css
+++ b/style.css
@@ -28,10 +28,10 @@ font-weight: 700;
 background: #111;
 color: #fff;
 background-size: cover;
--webkit-animation: bgchange 150s ease-in-out infinite;/*
+-webkit-animation: bgchange 300s ease-in-out infinite;
    -moz-animation: bgchange 300s ease-in-out infinite;
      -o-animation: bgchange 300s ease-in-out infinite;
-       -animation: bgchange 300s ease-in-out infinite;*/
+       -animation: bgchange 300s ease-in-out infinite;
 }
 @-webkit-keyframes bgchange {
   0%       { background-image: url("./media/bg10.png"); background-size: cover; }
